--- a/style/style.css
+++ b/style/style.css
@@ -13,11 +13,11 @@
 }
 .landing-page-background .landing-page-img-wrapper {
   flex: 1;
+  min-height: 800px;
 }
 .landing-page-background .landing-page-img-wrapper img {
   width: 100%;
   height: 100%;
-  min-height: 800px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -48,7 +48,7 @@
 .landing-search-wrapper {
   position: absolute;
   top: 60%;
-  left: 7%;
+  left: 10%;
   width: 70%;
   background-color: rgb(45, 47, 119);
   padding: 60px;
@@ -82,4 +82,49 @@
   background-color: rgb(186, 191, 42);
   font-size: 14px;
   cursor: pointer;
+}
+
+.search-results-wrapper .hero-img-wrapper {
+  height: 400px;
+}
+.search-results-wrapper .hero-img-wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.search-results-wrapper #input-search-over-img {
+  background: rgba(45, 47, 119, 0);
+  top: 40%;
+  left: 10%;
+}
+
+.title-h1 {
+  font-family: "Outfit", sans-serif;
+  font-weight: bold;
+  font-size: 1em;
+  color: rgb(45, 47, 119);
+  color: rgb(45, 47, 119);
+  font-size: 2em;
+  margin: 50px 120px;
+}
+
+.accomodation-card-wrapper {
+  border-radius: 15px;
+  border: 2px solid rgb(45, 47, 119);
+  box-shadow: 2px 2px black;
+  display: flex;
+  margin: 50px 120px;
+}
+.accomodation-card-wrapper .img-card-wrapper {
+  height: 300px;
+  width: 300px;
+  padding: 10px;
+}
+.accomodation-card-wrapper .img-card-wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 15px;
 }/*# sourceMappingURL=style.css.map */
