--- a/style/style.scss
+++ b/style/style.scss
@@ -4,6 +4,10 @@ $pink_cta: rgba(183, 62, 171, 1);
 $green_cta: rgba(186, 191, 42, 1);
 $dark_grey: rgba(97, 97, 113, 1);
 
+//NO DISPLAY
+.no-display{
+    display:none !important;
+}
 //MIXING PACKAGES
 
 //TYPOGRAPHY
@@ -31,6 +35,18 @@ $font_body_size: 1em;
     background-color: $green_cta;
     font-size: 14px;
     cursor: pointer;
+    text-transform: uppercase;
+}
+
+@mixin select-btn{
+    font-family: 'Outfit', sans-serif;
+    border-radius: 5px;
+    padding: 10px 40px;
+    color: white;
+    background-color: $pink_cta;
+    font-size: 14px;
+    cursor: pointer;
+    text-transform: uppercase;
 }
 
 .header{
@@ -99,6 +115,16 @@ $font_body_size: 1em;
             display: flex;
             flex-direction: column;
             padding-right: 30px;
+
+            input[type='text']{
+                @include headings();
+                font-weight: 400;
+            }
+
+            input[type='number'] {
+                @include headings();
+                font-weight: 500;
+                }
     
             label{
                 @include paragraph();
@@ -110,9 +136,13 @@ $font_body_size: 1em;
 
         #search-button-wrapper{
             padding-top: 22px;
-    
+            
+            a{
+                text-decoration: none;
+            }
             #search-btn{
                 @include search-btn();
+                
             }
         }
 
@@ -156,8 +186,11 @@ $font_body_size: 1em;
     box-shadow: 2px 2px black;
     display: flex;
     margin: 50px 120px;
+    padding: 5px 5px;
+    max-height: 320px;
 
     .img-card-wrapper{
+        max-height: 300px;
         height: 300px;
         width: 300px;
         padding: 10px;
@@ -168,6 +201,84 @@ $font_body_size: 1em;
             height: 100%;
             object-fit: cover;
             border-radius: 15px;
+        }
+    }
+
+    .accomodation-information-wrapper{
+        flex: 1;
+        margin-left: 20px;
+
+        .title-accommodation{
+            margin: 0;
+
+            h2{
+                @include headings();
+                font-size: $font_body_size * 1.5;
+                margin: 16px 0 0 0;
+               
+            }
+    
+            h3{
+                @include headings();
+                text-transform: uppercase;
+                color: $pink_cta;
+                margin: 5px 0;
+            }
+
+            .guest-description{
+                display: flex;
+                align-items: center;
+                @include headings();
+                color: $pink_cta;
+                padding-bottom: 20px;
+    
+                h4{
+                    margin: 0;
+                }
+                
+            }
+        }
+
+        .accommodation-description-paragraph{
+            @include paragraph();
+            max-height: 130px;
+            overflow: hidden;
+            
+        }
+    }
+
+    .price-information-wrapper{
+        margin: 40px 16px;
+        padding-left: 30px;
+        text-align: right;
+        
+        .per-night-price-wrapper{
+            padding-bottom: 30px;
+        }
+
+        .total-price-wrapper{
+            margin-bottom: 110px;
+        }
+        
+
+        .price{
+            @include headings();
+            font-size: $font_body_size * 1.3;
+            margin: 0;
+            
+        }
+        
+        .price-text{
+            @include headings();
+            text-transform: uppercase;
+            font-size: $font_body_size / 1.3;
+            color: $pink_cta;
+            margin: 0;
+        }
+
+        #select-btn{
+            @include select-btn();
+            margin: 0;
         }
     }
 
