--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,3 @@
-.no-display {
-  display: none !important;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -257,6 +253,27 @@ html {
 }
 .accomodation-card-wrapper .price-information-wrapper #select-btn:hover {
   opacity: 0.8;
+}
+
+.current-accommodation-wrapper {
+  margin: 50px 100px;
+}
+.current-accommodation-wrapper .current-accomodation-name {
+  font-family: "Outfit", sans-serif;
+  font-weight: bold;
+  font-size: 1em;
+  color: rgb(45, 47, 119);
+  font-size: 2em;
+}
+.current-accommodation-wrapper .location-wrapper {
+  display: flex;
+}
+.current-accommodation-wrapper .location-wrapper .current-accommodation-location {
+  font-family: "Outfit", sans-serif;
+  font-weight: bold;
+  font-size: 1em;
+  color: rgb(45, 47, 119);
+  color: rgb(97, 97, 113);
 }
 
 #no-availability-alert {
