--- a/style/style.scss
+++ b/style/style.scss
@@ -308,26 +308,6 @@ html{
 
 }
 
-//SPECIFICATION PAGE
-.current-accommodation-wrapper{
-    margin: 50px 100px;
-
-    .current-accomodation-name{
-
-        @include headings();
-        font-size: $font_body_size * 2;
-    }
-
-    .location-wrapper{
-        display: flex;
-        .current-accommodation-location{
-            @include headings();
-            color:$dark_grey;
-        }
-    }
-}
-
-
 //ALERT
 #no-availability-alert{
     
@@ -342,6 +322,98 @@ html{
         text-align: center;
     }
 }
+
+//SPECIFICATION PAGE
+.current-accommodation-wrapper{
+    margin: 50px 100px;
+
+    .current-accomodation-name{
+        @include headings();
+        font-size: $font_body_size * 2;
+    }
+
+    .location-wrapper{
+        display: flex;
+        .current-accommodation-location{
+            @include headings();
+            color:$dark_grey;
+        }
+    }
+
+    .current-accommodation-description{
+        @include paragraph();
+    }
+
+    .current-accommodation-amenities-wrapper{
+
+      
+        .amenities-title{
+            @include headings();
+            font-size: $font_body_size * 2;
+        }
+
+       
+
+        .top-wrapper, .bottom-wrapper{
+            display: flex;
+            justify-content: space-between;
+            
+            
+
+            .amenities-wrapper{
+                display: flex;
+                align-items: center;
+                flex: 1;
+                padding-bottom: 20px;
+
+                .available{
+                    @include paragraph();
+                    color: $dark_grey;
+                    text-transform: uppercase;
+                    font-weight:bolder;
+                    font-size: $font_body_size / 1.2;
+                    padding-left: 20px;
+
+                }
+
+                .no-available{
+                    text-decoration: line-through;
+                }
+            }
+        }
+    }
+
+    .green-separator{
+        border: none;
+        height: 3px;
+        color: $green_cta;
+        background-color: $green_cta;
+    }
+}
+
+.meals-available-section{
+
+    .meal-wrapper{
+        display: flex;
+        
+
+        .meal-image-wrapper{
+            max-height: 300px;
+            height: 150px;
+            width: 300px;
+            padding: 10px;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+}
+
+
+
 
 $breakpoint-tablet: 1250px;
 @media (max-width: $breakpoint-tablet) {
