--- a/style/style.scss
+++ b/style/style.scss
@@ -6,7 +6,7 @@ $dark_grey: rgba(97, 97, 113, 1);
 
 //NO DISPLAY
 .no-display{
-    // display:none !important;
+    display:none !important;
 }
 
 //MIXING PACKAGES
