--- a/style/style.css
+++ b/style/style.css
@@ -283,6 +283,7 @@ html {
   font-size: 1em;
   color: rgb(45, 47, 119);
   font-size: 2em;
+  margin: 0;
 }
 .current-accommodation-wrapper .location-wrapper {
   display: flex;
@@ -293,6 +294,66 @@ html {
   font-size: 1em;
   color: rgb(45, 47, 119);
   color: rgb(97, 97, 113);
+  font-size: 1.2em;
+}
+.current-accommodation-wrapper .image-gallery-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper {
+  display: flex;
+  max-height: 500px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper .main-image-wrapper {
+  height: 500px;
+  min-width: 600px;
+  padding-right: 12px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper .main-image-wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 2px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper .two-images-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 500px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper .two-images-wrapper .top-image-wrapper, .current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper .two-images-wrapper .bottom-image-wrapper {
+  min-height: 240px;
+  max-height: 300px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper .two-images-wrapper .top-image-wrapper img, .current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper .two-images-wrapper .bottom-image-wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 2px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .top-layout-wrapper .two-images-wrapper .top-image-wrapper {
+  padding-bottom: 10px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-height: 200px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-1, .current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-2, .current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-3, .current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-4, .current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-5 {
+  padding: 10px 10px 10px 0;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-1 img, .current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-2 img, .current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-3 img, .current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-4 img, .current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-5 img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 2px;
+}
+.current-accommodation-wrapper .image-gallery-wrapper .bottom-layout-wrapper .img-5 {
+  padding: 10px 0 10px 0 !important;
 }
 .current-accommodation-wrapper .current-accommodation-description {
   font-family: "Inter", sans-serif;
@@ -339,10 +400,10 @@ html {
   display: flex;
 }
 .meals-available-section .meal-wrapper .meal-image-wrapper {
+  min-width: 300px;
   max-height: 300px;
-  height: 150px;
-  width: 300px;
-  padding: 10px;
+  height: 200px;
+  padding: 20px;
 }
 .meals-available-section .meal-wrapper .meal-image-wrapper img {
   width: 100%;
@@ -359,7 +420,8 @@ html {
   color: rgb(45, 47, 119);
   font-size: 1.3em;
 }
-.meals-available-section .meal-wrapper .meal-description-wrapper .meal-price {
+.meals-available-section .meal-wrapper .meal-description-wrapper .meal-price, .meals-available-section .meal-wrapper .meal-description-wrapper .meal-type {
+  text-transform: uppercase;
   margin: 10px 0 20px 0;
   font-family: "Outfit", sans-serif;
   font-weight: bold;
@@ -398,5 +460,15 @@ html {
   }
   .accomodation-card-wrapper .accomodation-information-wrapper .accommodation-description-paragraph {
     display: none;
+  }
+}
+@media (max-width: 979px) {
+  .accomodation-card-wrapper {
+    flex-direction: column;
+    max-height: 800px;
+  }
+  .accomodation-card-wrapper .img-card-wrapper {
+    width: 90%;
+    margin: 10px auto;
   }
 }/*# sourceMappingURL=style.css.map */
