--- a/style/style.scss
+++ b/style/style.scss
@@ -330,13 +330,86 @@ html{
     .current-accomodation-name{
         @include headings();
         font-size: $font_body_size * 2;
+        margin: 0;
     }
 
     .location-wrapper{
         display: flex;
+
         .current-accommodation-location{
             @include headings();
             color:$dark_grey;
+            font-size: $font_body_size * 1.2;
+            
+        }
+    }
+
+    .image-gallery-wrapper{
+        display: flex;
+        flex-direction: column;
+
+        .top-layout-wrapper{
+            display: flex;
+            max-height: 500px;
+
+            .main-image-wrapper{
+                height: 500px;
+                 min-width: 600px;
+                 padding-right: 12px;
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 2px;
+                }
+                
+            }
+
+            .two-images-wrapper{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                min-height: 500px;
+               
+                .top-image-wrapper, .bottom-image-wrapper{
+                    min-height: 240px;
+                    max-height: 300px;
+
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        border-radius: 2px;
+                    }
+                }
+
+                .top-image-wrapper{
+                    padding-bottom: 10px;
+                }
+            }
+        }
+
+        .bottom-layout-wrapper{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            max-height: 200px;
+
+            .img-1, .img-2, .img-3, .img-4, .img-5{
+            padding: 10px 10px 10px 0;
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 2px;
+                }
+            }
+
+            .img-5{
+                padding: 10px 0 10px 0 !important;
+            }
         }
     }
 
@@ -352,7 +425,6 @@ html{
             font-size: $font_body_size * 2;
         }
 
-       
 
         .top-wrapper, .bottom-wrapper{
             display: flex;
@@ -399,27 +471,29 @@ html{
         
 
         .meal-image-wrapper{
+            min-width: 300px;
             max-height: 300px;
-            height: 150px;
-            width: 300px;
-            padding: 10px;
+            height: 200px;
+            padding: 20px;
 
             img{
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
-                border-radius: 2px;;
+                border-radius: 2px;
             }
         }
 
         .meal-description-wrapper{
+            
             .meal-name{
                 margin: 15px 0 0 0;
                 @include headings();
                 font-size: $font_body_size * 1.3;
             }
 
-            .meal-price{
+            .meal-price, .meal-type{
+                text-transform: uppercase;
                 margin: 10px 0 20px 0;
                 @include headings();
                 color: $dark_grey;
@@ -451,8 +525,10 @@ html{
 
 
 
-
+//TABLET BREAKPOINT
 $breakpoint-tablet: 1250px;
+$breakpoint-small-tablet: 979px;
+
 @media (max-width: $breakpoint-tablet) {
 
     .accomodation-card-wrapper{
@@ -469,3 +545,16 @@ $breakpoint-tablet: 1250px;
    
     }
 }
+
+@media(max-width: $breakpoint-small-tablet){
+    .accomodation-card-wrapper{
+        flex-direction: column;
+        max-height: 800px;
+
+        .img-card-wrapper{
+            width: 90%;
+            margin: 10px auto;
+        }
+    }
+}
+
