--- a/style/style.scss
+++ b/style/style.scss
@@ -296,12 +296,12 @@ html{
             margin: 0;
         }
 
-        #select-btn{
+        .select-btn{
             @include select-btn();
             margin: 0;
         }
 
-        #select-btn:hover{
+        .select-btn:hover{
             opacity: 0.8;
         }
     }
@@ -325,24 +325,40 @@ html{
 
 //SPECIFICATION PAGE
 .current-accommodation-wrapper{
+    position: relative;
     margin: 50px 100px;
+
+    .search-current-accommodation-wrapper{
+        margin: 30px auto;
+
+    }
 
     .current-accomodation-name{
         @include headings();
         font-size: $font_body_size * 2;
-        margin: 0;
+        margin: 10px auto;
     }
 
-    .location-wrapper{
+    .icons-info-wrapper{
         display: flex;
+        
 
-        .current-accommodation-location{
-            @include headings();
-            color:$dark_grey;
-            font-size: $font_body_size * 1.2;
+        .location-wrapper, .current-accommodation-guest-info, .current-accommodation-night-info, .current-accommodation-total-price-info{
+            display: flex;
+            padding-right: 30px;
             
+           
+            .current-accommodation-location, .current-accommodation-guest-number, .current-accommodation-nights, .current-accommodation-total-price{
+                @include headings();
+                    color: $dark_grey;
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    font-size: $font_body_size /1.1;
+                    margin: 10px;   
+            }
         }
     }
+
 
     .image-gallery-wrapper{
         display: flex;
@@ -462,66 +478,111 @@ html{
         color: $green_cta;
         background-color: $green_cta;
     }
-}
 
-.meals-available-section{
 
-    .meal-wrapper{
-        display: flex;
-        
+    .meals-available-section{
 
-        .meal-image-wrapper{
-            min-width: 300px;
-            max-height: 300px;
-            height: 200px;
-            padding: 20px;
-
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                border-radius: 2px;
-            }
-        }
-
-        .meal-description-wrapper{
-            
-            .meal-name{
-                margin: 15px 0 0 0;
-                @include headings();
-                font-size: $font_body_size * 1.3;
-            }
-
-            .meal-price, .meal-type{
-                text-transform: uppercase;
-                margin: 10px 0 20px 0;
-                @include headings();
-                color: $dark_grey;
-            }
-
-            .meal-description{
-                @include paragraph();
-            }
-        }
-        
-        .add-wrapper{
+        .meal-wrapper{
             display: flex;
-            align-items: flex-end;
-            justify-content: flex-end;
+            
 
-            .add-btn{
-                @include search-btn();
-                background-color: $pink_cta;
+            .meal-image-wrapper{
+                min-width: 300px;
+                max-height: 300px;
+                height: 200px;
+                padding: 20px;
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 2px;
+                }
             }
 
-            .add-btn:hover{
-                opacity: 0.8;
+            .meal-description-wrapper{
+                
+                .meal-name{
+                    margin: 15px 0 0 0;
+                    @include headings();
+                    font-size: $font_body_size * 1.3;
+                }
+
+                .meal-price, .meal-type{
+                    text-transform: uppercase;
+                    margin: 10px 0 20px 0;
+                    @include headings();
+                    color: $dark_grey;
+                }
+
+                .meal-description{
+                    @include paragraph();
+                }
+            }
+            
+            .add-wrapper{
+                display: flex;
+                align-items: flex-end;
+                justify-content: flex-end;
+
+                .add-btn{
+                    @include search-btn();
+                    background-color: $pink_cta;
+                }
+
+                .add-btn:hover{
+                    opacity: 0.8;
+                }
+            }
+        
+        }
+
+        .show-more-btn-wrapper{
+            display: flex;
+            justify-content: center;
+            
+        .show-more-btn{
+            margin: 10px;
+            @include search-btn();
+            padding: 15px;
+            
+        }
+
+        .show-more-btn:hover{
+                opacity: 0.7;
             }
         }
     }
 
-  
+    .modal{
+        position: fixed;
+        background-color: $green_cta;
+        padding: 40px;
+        border-radius: 20px; 
+        width: 70%;
+        top: 30%;
+        left: 15%;
+        -webkit-animation-name: fadeIn; /* Fade in the background */
+        -webkit-animation-duration: 0.4s;
+        animation-name: fadeIn;
+        animation-duration: 0.4s;
+        
+
+        .close-btn{
+            @include headings();
+            font-size: $font_body_size * 1.5;
+            display: flex;
+            justify-content: flex-end;
+            cursor: pointer;
+        }
+
+        .close-btn:hover{
+            color: white;
+        }
+    }
+
 }
+
 
 
 
